[gd_scene load_steps=4 format=3 uid="uid://c26omsrntu5in"]

[ext_resource type="Script" path="res://leaderboard.gd" id="1_k18sb"]
[ext_resource type="Theme" uid="uid://bm4dq4d3pa137" path="res://default_theme.tres" id="1_uq44x"]
[ext_resource type="Texture2D" uid="uid://buwdmqowsk0ao" path="res://refresh-cw.svg" id="3_a6cb5"]

[node name="Leaderboard" type="VBoxContainer"]
custom_minimum_size = Vector2(500, 2.08165e-12)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_uq44x")
script = ExtResource("1_k18sb")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="SubmitForm" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Score" type="Label" parent="SubmitForm"]
layout_mode = 2
text = "Your score: %d"

[node name="Name" type="LineEdit" parent="SubmitForm"]
layout_mode = 2
placeholder_text = "Enter your name"

[node name="Submit" type="Button" parent="SubmitForm"]
layout_mode = 2
text = "Submit"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Leaderboard"

[node name="Control" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="HBoxContainer/Control"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
offset_right = 32.0
offset_bottom = 32.0
pivot_offset = Vector2(16, 16)
texture_normal = ExtResource("3_a6cb5")
stretch_mode = 3

[node name="Scores" type="VBoxContainer" parent="."]
layout_mode = 2

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
[connection signal="pressed" from="SubmitForm/Submit" to="." method="_on_submit_pressed"]
[connection signal="pressed" from="HBoxContainer/Control/TextureButton" to="." method="_on_texture_button_pressed"]
